# airflow-stackable

./: .pre-commit-config.yaml  Dockerfile  README.md  dags_configmap.yml  pyproject.toml  role.yml  run.sh  s3_script.py
.github/actions/s3cmd-docker/: .s3cfg  Dockerfile  README.md  action.yml  entrypoint.sh
.github/workflows/: check_build_and_deploy.yml  deploy.yml  upload.yml
helpers/: get_k8s_config_file.py
manifests/: airflow.yml  dags_configmap.yml  pyspark.yml  role_binding.yml
terraform/providers/ionos-cloud/.terraform/: terraform.tfstate
terraform/providers/ionos-cloud/.terraform/modules/: modules.json
terraform/providers/ionos-cloud/.terraform/providers/registry.terraform.io/ionos-cloud/ionoscloud/6.6.8/linux_amd64/: CHANGELOG.md  README.md
terraform/providers/ionos-cloud/kubeflow-cluster-module/: k8s_cluster.tf  main.tf  nodes.tf  outputs.tf  variables.tf
terraform/providers/ionos-cloud/multiple-environments/poc/: main.tf  terraform.tfstate  terraform.tfstate.backup  tfplan  variables.tf
terraform/providers/ionos-cloud/multiple-environments/poc/.terraform/: terraform.tfstate
terraform/providers/ionos-cloud/multiple-environments/production/: .terraform.lock.hcl  main.tf  terraform.tfstate.backup  tfplan
terraform/providers/ionos-cloud/multiple-environments/production/.terraform/: terraform.tfstate
terraform/providers/ionos-cloud/multiple-environments/production/.terraform/modules/: modules.json
(+1 files in other folders)
